# CLIFF_CatAgi

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: agentic_kan_architecture.md  first_10_minutes.md  homotopy_aware_synthesis.md
functorflow_v3/: __init__.py  agentic_workflows.py  basket_rocket_corpus_synthesis.py  basket_rocket_example_export.py  basket_rocket_sec_agentic.py  basket_rocket_visualizations.py  blueprints.py  causal_homotopy.py  cliff.py  cliff_worker.py  company_similarity_agentic.py  consciousness.py  course_demo_agentic.py  csql_bundle.py  culinary_tour_agentic.py  dashboard_query_launcher.py  democritus_agentic.py  democritus_batch_agentic.py  democritus_corpus_synthesis.py  democritus_decision_metrics.py  democritus_example_export.py  democritus_query_agentic.py  evidence_convergence.py  llm_usage.py  product_feedback_agentic.py  product_feedback_corpus_synthesis.py  product_feedback_query_agentic.py  product_feedback_visualizations.py  query_router_agentic.py  repo_layout.py  semantic_kernel.py  textbook_backstop.py
tests/: __init__.py  test_agentic_workflows.py  test_basket_rocket_example_export.py  test_basket_rocket_sec_agentic.py  test_cliff.py  test_company_similarity_agentic.py  test_consciousness.py  test_course_demo_agentic.py  test_cross_company_functors.py  test_culinary_tour_agentic.py  test_dashboard_query_launcher.py  test_democritus_agentic.py  test_democritus_batch_agentic.py  test_democritus_example_export.py  test_democritus_public_scripts.py  test_democritus_query_agentic.py  test_evidence_convergence.py  (+7 more)
(+31 files in other folders)
