[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CLIFF_CatAgi"
version = "0.1.0"
description = "CLIFF as a textbook-centric interface to Categories for AGI."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sridhar Mahadevan" },
]
keywords = [
    "category theory",
    "agents",
    "education",
    "causal inference",
    "transformers",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "matplotlib>=3.8",
    "networkx>=3.2",
    "numpy>=1.26,<2.0",
    "pandas>=2.2",
    "pdfminer.six>=20221105",
    "PyMuPDF>=1.24",
    "pypdf>=4.2",
    "pyarrow>=16.0",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "sentence-transformers>=2.6",
    "torch>=2.3",
    "tqdm>=4.66",
    "umap-learn>=0.5.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
docs = []

[project.scripts]
cliff = "functorflow_v3.cliff:main"
cliff-export-democritus-example = "functorflow_v3.democritus_example_export:main"

[tool.setuptools]
packages = ["functorflow_v3"]
